<resources>
    <string name="app_name">Feel The Beat Inside</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">Criar</string>
    <string name="password">Senha</string>
    <string name="e_mail">E-mail</string>
    <string name="name">Nome</string>
    <string name="enter">Entrar</string>
    <string name="not_having_account">Não tem conta?</string>
    <string name="create_here">Crie aqui</string>
    <string name="enter_with_spotify">Entrar com Spotify</string>
    <string name="recovered_here">Recupere aqui</string>
    <string name="password_forgot">Esqueceu a senha?</string>
    <string name="title_activity_main2">Feel The BEat Inside</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="playlist">Playlist</string>
    <string name="play">Play</string>
    <string name="atention">Atenção</string>
    <string name="ok">Ok</string>
    <string name="search">Pesquisar</string>
    <string name="home">Home</string>
    <string name="top_ten_less_played">As 10 menos tocadas</string>
    <string name="demo_song_name">Chão de Giz</string>
    <string name="demo_artist_name">Zé Ramalho</string>
    <string name="demo_album_name">Chão de Giz</string>
    <string name="save">Salvar</string>
    <string name="add_to_playlist">Adicionar na playlist</string>
    <string name="share">Compartilhar</string>
    <string name="go_to_radio">Ir para rádio</string>
    <string name="view_album">Ver álbum</string>
    <string name="procurar">Procurar</string>
    <string name="news">News</string>
    <string name="albuns">Albuns</string>
    <string name="my_playlist">Minha Playlist</string>
    <string name="new_albuns_and_singles">Novos Álbuns e Músicas</string>
    <string name="recent_search">Pesquisas recentes</string>
    <string name="not_prepared">Ainda não liberado!</string>
    <string name="recovered_email">E-mail para recuperação</string>
    <string name="send">Enviar</string>
    <string name="do_search">Faça uma pesquisa primeiro</string>
</resources>
