<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".activities.CreateAccountActivity">

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">

        <LinearLayout
                style="@style/LinearLayoutPattern"
                android:gravity="center">

            <ImageView
                    android:id="@+id/imageProfile"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/spotify"/>

            <EditText
                    android:id="@+id/editUserName"
                    style="@style/PatternEdittext"
                    android:hint="@string/name"/>

            <EditText
                    android:id="@+id/editUserEmail"
                    style="@style/PatternEdittext"
                    android:hint="@string/e_mail"/>

            <EditText
                    android:id="@+id/editUserPassword"
                    style="@style/PatternEdittext"
                    android:hint="@string/password"/>

            <Button
                    android:id="@+id/buttonCreateAccount"
                    style="@style/PatternButton"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/create"/>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>