<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimaryDark"
              android:orientation="vertical"
              android:gravity="center"
              tools:context="br.com.feelthebeatinside.activities.TrackDetailActivity">

    <ImageView
            android:id="@+id/detail_album_image_field"
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:src="@drawable/maroon_sample_album"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

        <TextView
                android:id="@+id/detail_track_title_field"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:textColor="#ffff"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="18sp"
                android:text="@string/demo_song_name"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:orientation="horizontal"
                android:layout_gravity="center">

            <TextView
                    android:id="@+id/detail_artist_field"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="12sp"
                    android:textColor="#ffff"
                    android:textStyle="bold"
                    android:text="@string/demo_artist_name"/>

            <TextView
                    android:id="@+id/detail_album_field"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:textSize="12sp"
                    android:textColor="#ffff"
                    android:textStyle="bold"
                    android:text="@string/demo_album_name"/>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    android:id="@+id/detail_save_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="20dp"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/ic_add_black_24dp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_marginStart="10dp"
                        android:textColor="#ffff"
                        android:text="@string/save"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/detail_add_playlist_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="20dp"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/ic_playlist_add_black_24dp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_marginStart="10dp"
                        android:textColor="#ffff"
                        android:text="@string/add_to_playlist"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/detail_share_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="20dp"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/ic_file_upload_black_24dp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_marginStart="10dp"
                        android:textColor="#ffff"
                        android:text="@string/share"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/detail_radio_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="20dp"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:backgroundTint="#ffffff"
                        android:background="@drawable/ic_radio_black_24dp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_marginStart="10dp"
                        android:textColor="#ffff"
                        android:text="@string/go_to_radio"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/detail_album_view_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="20dp"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/ic_surround_sound_black_24dp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_marginStart="10dp"
                        android:textColor="#ffff"
                        android:text="@string/view_album"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
